# stacked

./: Cargo.toml  LICENSE  README.md  build.sh  output.stck  program.stck
.obsidian/: workspace.json
examples/: fib.stck
src/: lib.rs  main.rs
src/disassemble/: mod.rs
src/exec/: mod.rs
src/log/: mod.rs
src/parser/: mod.rs
src/syscall/: mod.rs
