[package]
name = "lib_stacked"
version = "0.1.1"
edition = "2021"

description = "Virtual Machine Byte Code For Compilers."
readme = "README.md"
authors = ["Prox"]
repository = "https://github.com/proxin187/stacked"
keywords = ["vm", "virtual", "bytecode", "byte", "compiler"]
categories = ["compilers", "emulators", "virtualization"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
nix = "0.27.1"
